# ironcub-mk1-software

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  environment.yml  exportOlderVersion.m
flight-controllers-stable/: .gitignore  README.md  (+1 more)
lib/: CMakeLists.txt  README.md  exportOlderVersion.m
lib/gazebo/: CMakeLists.txt  README.md
lib/gazebo/plugins/: CMakeLists.txt
lib/gazebo/plugins/jets-plugin/: CMakeLists.txt  jet-plugin.h  jets-plugin.cc
lib/simulink/: CMakeLists.txt  README.md  ironcub_lib_main_v1.slx  slblocks.m
lib/simulink/Visualizer++/: CMakeLists.txt  iDynVisualizer_v1.slx
lib/simulink/forward_dynamics/: forward_dynamics_v1.slx
lib/simulink/forward_dynamics/src/: forwardDynamics.m
lib/simulink/jets_control/: jets_control_v1.slx
lib/simulink/jets_control/src/: fl_jets_control.m  fl_jets_control_des_jets.m  fl_single_jet_control.m  get_f.m
lib/simulink/momentum_flight_control/: README.md  momentum_flight_control_sublib_v1.slx  momentum_flight_control_v1.slx
lib/simulink/momentum_flight_control/src/dynamicsAndKinematics/: computeJetsAxesAndArms.m  getCentrInertia.m
lib/simulink/momentum_flight_control/src/momentumControl/: computeMomentumReferences.m  demuxJetAxesAndArms.m  flyingAttitudeControl.m  flyingMomentumControl.m  skewBar.m  skewZeroBar.m
lib/simulink/momentum_flight_control/src/quadraticProgramming/: combineInputBoundsAndInequalitiesQP.m  processQPinputMomentumControl.m  processQPinputTorqueControl.m
lib/simulink/momentum_flight_control/src/stateMachine/: computeReferencesBaseAndCoM.m  detectMovementsFromJoystick.m  feetContactActivation.m  verticalForcesControl.m
lib/simulink/momentum_flight_control/src/torqueControl/: flyingTorqueControl.m  fromJetsIntensitiesToForces.m
lib/simulink/momentum_flight_control/src/utilities/: computeCurrentFuelConsumption.m  fromBodyFrameToMixed_contactForces.m  fromGuiToJoystick.m  selectInitContactForces.m
lib/simulink/thrust_estimation/: README.md  thrust_estimation_sublib_v1.slx  thrust_estimation_v1.slx
lib/simulink/thrust_estimation/src/EKF-MOMENTUM_JET_FEET-CMM_FEET/: Amatrix.m  EKF_MOMENTUM_JET_FEET_CMM_FEET.m  computeJacobians_EKF_MOMENTUM_JET_FEET_CMM_FEET.m  dynamics_EKF_MOMENTUM_JET_FEET_CMM_FEET.m  jetModel_get_xDot.m
lib/simulink/thrust_estimation/src/EKF-MOMENTUM_JET_FEET-CMM_JET_FEET/: Amatrix.m  EKF_MOMENTUM_JET_FEET_CMM_JET_FEET.m  computeJacobians_EKF_MOMENTUM_JET_FEET_CMM_JET_FEET.m  dynamics_EKF_MOMENTUM_JET_FEET_CMM_JET_FEET.m  jetModel_get_xDot.m
lib/simulink/visualizer++/: CMakeLists.txt  iDynVisualizer_v1.slx
lib/simulink/visualizer++/conf/: iRonCubVisualizer_v1.ini
lib/simulink/visualizer++/include/Visualizer/: Visualizer.h
lib/simulink/visualizer++/src/: Factory.cpp  Visualizer.cpp
models/iRonCub-Mk1/iRonCub/: CMakeLists.txt  README.md
models/iRonCub-Mk1/iRonCub/conf/: README.md  common.ini  gazebo_icub_head_without_eyes.ini  gazebo_icub_left_arm.ini  gazebo_icub_left_leg.ini  gazebo_icub_torso.ini  jets.ini
models/iRonCub-Mk1/iRonCub/conf/MTB/: gazebo_icub_left_arm_mtb.ini  gazebo_icub_right_arm_mtb.ini
models/iRonCub-Mk1/iRonCub/meshes/: README.md
models/iRonCub-Mk1/iRonCub/meshes/stl/: sim_sea_2-5_chest_bb_prt.stl  sim_sea_2-5_l_shank_prt.stl  sim_sea_2-5_l_shoulder_1_prt.stl  sim_sea_2-5_l_sole_prt.stl  sim_sea_2-5_lap_belt_1_prt.stl  sim_sea_2-5_lap_belt_2_prt.stl  sim_sea_2-5_neck_2_prt.stl  sim_sea_2-5_r_elbow_prosup_prt.stl  sim_sea_2-5_r_elbow_prt.stl  sim_sea_2-5_r_sole_prt.stl
models/iRonCub-Mk1/iRonCub/robots/iRonCub-Mk1/: model.urdf  model_stl.urdf
models/iRonCub-Mk1/iRonCub/robots/iRonCub-Mk1_Gazebo/: launch-wholebodydynamics-iRonCub.xml  model.urdf  model_stl.urdf
models/iRonCub-Mk1/iRonCub/robots/iRonCub-Mk1_Gazebo_v1/: launch-wholebodydynamics-iRonCub.xml  model.urdf  model_stl.urdf
models/iRonCub-Mk1/iRonCub/robots/iRonCub-Mk1_v1/: model.urdf  model_stl.urdf
models/iRonCub-Mk1_1/iRonCub/: CMakeLists.txt  README.md
models/iRonCub-Mk1_1/iRonCub/conf/: README.md  gazebo_icub_inertial.ini
models/iRonCub-Mk1_1/iRonCub/meshes/: README.md
models/iRonCub-Mk1_1/iRonCub/meshes/stl/: sim_sea_2-5_chest_aruco_prt.stl  sim_sea_2-5_head_prt.stl  sim_sea_2-5_l_elbow_p160_prt.stl  sim_sea_2-5_l_elbow_prosup_prt.stl  sim_sea_2-5_l_foot_prt.stl  sim_sea_2-5_l_hip_1_prt.stl  sim_sea_2-5_l_hip_2_prt.stl  sim_sea_2-5_l_thigh_prt.stl  sim_sea_2-5_l_upper_arm_prt.stl  sim_sea_2-5_l_upper_thigh_prt.stl  sim_sea_2-5_r_ankle_prt.stl  sim_sea_2-5_r_elbow_prosup_prt.stl  sim_sea_2-5_r_hip_1_prt.stl  sim_sea_2-5_r_hip_2_prt.stl  sim_sea_2-5_r_shank_prt.stl  sim_sea_2-5_r_shoulder_1_prt.stl  sim_sea_2-5_r_shoulder_2_prt.stl  sim_sea_2-5_r_sole_prt.stl  sim_sea_2-5_r_upper_arm_prt.stl
models/iRonCub-Mk1_1/iRonCub/robots/iRonCub-Mk1_1/: model.urdf  model_stl.urdf
models/iRonCub-Mk1_1/iRonCub/robots/iRonCub-Mk1_1_Gazebo/: model.config  model.urdf  model_stl.urdf
models/iRonCub-Mk1_1/iRonCub/robots/iRonCub-Mk1_1_Gazebo_v1/: model.urdf  model_stl.urdf
models/iRonCub-Mk1_1/iRonCub/robots/iRonCub-Mk1_1_v1/: model.urdf  model_stl.urdf
models/iRonCub-Mk1_v1/: CMakeLists.txt
models/iRonCub-Mk1_v1/cad/: ironcub-mk1_sim_model.asm.1  sim_sea_2-5_chest_bb.prt.1  sim_sea_2-5_l_elbow_p100.prt.1  sim_sea_2-5_l_sole.prt.1  sim_sea_2-5_r_elbow_p100.prt.1  sim_sea_2-5_r_elbow_prosup.prt.1  sim_sea_2-5_r_p220.prt.1
models/iRonCub-Mk1_v1/iRonCub/: CMakeLists.txt  README.md
models/iRonCub-Mk1_v1/iRonCub/conf/: gazebo_icub_right_arm.ini  gazebo_icub_right_leg.ini  gazebo_icub_xsens_inertial.ini  jets.ini
models/iRonCub-Mk1_v1/iRonCub/meshes/stl/: sim_sea_2-5_l_ankle_prt.stl  sim_sea_2-5_l_elbow_p100_prt.stl  sim_sea_2-5_l_elbow_prosup_prt.stl  sim_sea_2-5_l_elbow_prt.stl  sim_sea_2-5_neck_1_prt.stl  sim_sea_2-5_r_elbow_p100_prt.stl  sim_sea_2-5_r_foot_prt.stl  sim_sea_2-5_r_upper_thigh_prt.stl
models/iRonCub-Mk1_v1/iRonCub/robots/iRonCub-Mk1_Gazebo_v1/: model.config  model.urdf  model_stl.urdf
models/iRonCub-Mk1_v1/resources/: CMakeLists.txt
models/iRonCub-Mk1_v1/resources/data/: IRONCUB-MK1_simmechanics_options.yaml.in  README.md
(+133 files in other folders)
