################################################################################
#                                                                              #
# Copyright (C) 2018 Fondazione Istitito Italiano di Tecnologia (IIT)          #
# All Rights Reserved.                                                         #
#                                                                              #
################################################################################

cmake_minimum_required(VERSION 3.5)
project(ironcub_software
        VERSION 0.0.1
        LANGUAGES C CXX)

option(INSTALL_IRONCUB_MODELS "Install iRonCub models in CMAKE_INSTALL_PREFIX." TRUE)
option(INSTALL_LIBRARY "Install iRonCub gazebo plugin and simulink library." TRUE)
option(USE_NONLINEAR_JET_DYNAMICS_PLUGIN "Install the nonlinear dynamics of the jet" FALSE)
option(USE_FIRST_ORDER_JET_DYNAMICS_PLUGIN "Install the firstorder dynamics of the jet" TRUE)

add_subdirectory(lib)
add_subdirectory(models)


#### ADDED BY GABRI!!!


# Check the Operative System
if(MSVC OR WIN32)
	set(EXPORT_VAR "set")
	set(PATH_SEPARATOR "\\")
	set(VARIABLE_START "%")
	set(VARIABLE_END "%")
	set(PATH_LIST_SEPARATOR ";")
	set(PLUGIN_FOLDER_NAME "bin")
	set(SETUP_SCRIPT_EXTENSION ".bat")
elseif(UNIX)
	set(EXPORT_VAR "export")
	set(PATH_SEPARATOR "/")
	set(VARIABLE_START "$")
	set(VARIABLE_END "")
	set(PATH_LIST_SEPARATOR ":")
	set(PLUGIN_FOLDER_NAME "lib")
	set(SETUP_SCRIPT_EXTENSION ".sh")
endif()

file(TO_NATIVE_PATH "${PROJECT_SOURCE_DIR}" IRONCUB_SOURCE_DIR)

# Set paths for using the iRonCub models in Gazebo
set(SETUP_PATH_GAZEBO_MODELS "
${EXPORT_VAR} GAZEBO_MODEL_PATH=${VARIABLE_START}GAZEBO_MODEL_PATH${VARIABLE_END}${PATH_LIST_SEPARATOR}${VARIABLE_START}IRONCUB_SOFTWARE_SOURCE_DIR${VARIABLE_END}${PATH_SEPARATOR}models${PATH_SEPARATOR}
${EXPORT_VAR} GAZEBO_MODEL_PATH=${VARIABLE_START}GAZEBO_MODEL_PATH${VARIABLE_END}${PATH_LIST_SEPARATOR}${VARIABLE_START}IRONCUB_SOFTWARE_SOURCE_DIR${VARIABLE_END}${PATH_SEPARATOR}models${PATH_SEPARATOR}iRonCub-Mk1${PATH_SEPARATOR}iRonCub${PATH_SEPARATOR}robots
${EXPORT_VAR} GAZEBO_MODEL_PATH=${VARIABLE_START}GAZEBO_MODEL_PATH${VARIABLE_END}${PATH_LIST_SEPARATOR}${VARIABLE_START}IRONCUB_SOFTWARE_SOURCE_DIR${VARIABLE_END}${PATH_SEPARATOR}models${PATH_SEPARATOR}iRonCub-Mk1_1${PATH_SEPARATOR}iRonCub${PATH_SEPARATOR}robots
${EXPORT_VAR} GAZEBO_RESOURCE_PATH=${VARIABLE_START}GAZEBO_RESOURCE_PATH${VARIABLE_END}${PATH_LIST_SEPARATOR}${VARIABLE_START}IRONCUB_SOFTWARE_SOURCE_DIR${VARIABLE_END}${PATH_SEPARATOR}models${PATH_SEPARATOR}worlds${PATH_SEPARATOR}iRonCub-Mk1_playground
${EXPORT_VAR} GAZEBO_RESOURCE_PATH=${VARIABLE_START}GAZEBO_RESOURCE_PATH${VARIABLE_END}${PATH_LIST_SEPARATOR}${VARIABLE_START}IRONCUB_SOFTWARE_SOURCE_DIR${VARIABLE_END}${PATH_SEPARATOR}models${PATH_SEPARATOR}worlds${PATH_SEPARATOR}iRonCub-Mk1_1_playground
${EXPORT_VAR} YARP_DATA_DIRS=${VARIABLE_START}YARP_DATA_DIRS${VARIABLE_END}${PATH_LIST_SEPARATOR}${VARIABLE_START}IRONCUB_SOFTWARE_SOURCE_DIR${VARIABLE_END}${PATH_SEPARATOR}models${PATH_SEPARATOR}iRonCub-Mk1${PATH_SEPARATOR}iRonCub${PATH_SEPARATOR}
${EXPORT_VAR} YARP_DATA_DIRS=${VARIABLE_START}YARP_DATA_DIRS${VARIABLE_END}${PATH_LIST_SEPARATOR}${VARIABLE_START}IRONCUB_SOFTWARE_SOURCE_DIR${VARIABLE_END}${PATH_SEPARATOR}models${PATH_SEPARATOR}iRonCub-Mk1_1${PATH_SEPARATOR}iRonCub${PATH_SEPARATOR}")

# Configure MATLAB startup file
configure_file(${CMAKE_CURRENT_SOURCE_DIR}/cmake/templates/setup_v1.in ${CMAKE_BINARY_DIR}/share/setup${SETUP_SCRIPT_EXTENSION})
INSTALL(FILES ${CMAKE_BINARY_DIR}/share/setup${SETUP_SCRIPT_EXTENSION} DESTINATION ${CMAKE_INSTALL_PREFIX}/share/ironcub)
add_subdirectory(simulink)

