################################################################################
#                                                                              #
# Copyright (C) 2017 Fondazione Istituto Italiano di Tecnologia (IIT)          #
# All Rights Reserved.                                                         #
#                                                                              #
################################################################################

add_subdirectory(jets-plugin)

